--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 .DS_Store
 node_modules/
-npm-debug.log
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .history
+.vscode
+.idea
+.project
